[package]
name = "carboxyl_time"
version = "0.0.1"
authors = ["Eduard Bopp <eduard.bopp@aepsil0n.de>"]
description = "FRP timing utilities"
homepage = "https://github.com/aepsil0n/carboxyl_time"
repository = "https://github.com/aepsil0n/carboxyl_time"
readme = "README.md"
keywords = ["frp", "reactive", "time"]
license = "LGPL-3.0+"

[dependencies]
carboxyl = "0.0.11"
time = "0.1"
lazy_static = "0.1.10"
